--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,6 +91,6 @@ jobs:
           GOOGLE_SECRET_ID: ${{ secrets.GOOGLE_SECRET_ID }}
           FACEBOOK_CLIENT_ID: ${{ secrets.FACEBOOK_CLIENT_ID }}
           FACEBOOK_SECRET_ID: ${{ secrets.FACEBOOK_SECRET_ID }}
-          GITHUB_CLIENT_ID: ${{ secrets.GH_CLIENT_ID }}
-          GITHUB_SECRET_ID: ${{ secrets.GH_SECRET_ID }}
+          GH_SECRET_ID: ${{ secrets.GH_CLIENT_ID }
+          GH_CLIENT_ID: ${{ secrets.GH_SECRET_ID }}
         run: serverless deploy --verbose --stage dev
