Revert "Use opt instead of env"
This reverts commit 24dc9197da8cbc28a574aac79ff2f702c828df07.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,14 +69,11 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          serverless deploy \
-            --verbose \
-            --stage dev \
-            --JWT_VERIFY_KEY="${{ secrets.JWT_VERIFY_KEY }}" \
-            --GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" \
-            --GOOGLE_SECRET_ID="${{ secrets.GOOGLE_SECRET_ID }}" \
-            --FACEBOOK_CLIENT_ID="${{ secrets.FACEBOOK_CLIENT_ID }}" \
-            --FACEBOOK_SECRET_ID="${{ secrets.FACEBOOK_SECRET_ID }}" \
-            --GH_SECRET_ID="${{ secrets.GH_CLIENT_ID }}" \
-            --GH_CLIENT_ID="${{ secrets.GH_SECRET_ID }}"
+          JWT_VERIFY_KEY: ${{ secrets.JWT_VERIFY_KEY }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_SECRET_ID: ${{ secrets.GOOGLE_SECRET_ID }}
+          FACEBOOK_CLIENT_ID: ${{ secrets.FACEBOOK_CLIENT_ID }}
+          FACEBOOK_SECRET_ID: ${{ secrets.FACEBOOK_SECRET_ID }}
+          GH_SECRET_ID: ${{ secrets.GH_CLIENT_ID }}
+          GH_CLIENT_ID: ${{ secrets.GH_SECRET_ID }}
+        run: serverless deploy --verbose --stage dev
