--- a/serverless.yml
+++ b/serverless.yml
@@ -86,7 +86,7 @@ functions:
     description: "Authorizes incoming APIGW requests and verifies the token"
     memorySize: 128
     timeout: 10
-    env:
+    environment:
       JWT_VERIFY_KEY: ${env:JWT_VERIFY_KEY}
     package:
       include:
@@ -132,7 +132,7 @@ functions:
     description: "Retrieves a login URL for a chosen oauth provider"
     memorySize: 128
     timeout: 10
-    env:
+    environment:
       OAUTH_CALLBACK_HOST: "http://localhost:8080"
       GOOGLE_CLIENT_ID: ${env:GOOGLE_CLIENT_ID}
       GOOGLE_SECRET_ID: ${env:GOOGLE_SECRET_ID}
@@ -154,7 +154,7 @@ functions:
     description: "Provides a url for oauth providers to redirect to"
     memorySize: 128
     timeout: 10
-    env:
+    environment:
       OAUTH_CALLBACK_HOST: "http://localhost:8080"
       GOOGLE_CLIENT_ID: ${env:GOOGLE_CLIENT_ID}
       GOOGLE_SECRET_ID: ${env:GOOGLE_SECRET_ID}
