Add spotify client details

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,4 +76,6 @@ jobs:
           FACEBOOK_SECRET_ID: ${{ secrets.FACEBOOK_SECRET_ID }}
           GH_SECRET_ID: ${{ secrets.GH_CLIENT_ID }}
           GH_CLIENT_ID: ${{ secrets.GH_SECRET_ID }}
+          SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
+          SPOTIFY_SECRET_ID: ${{ secrets.SPOTIFY_SECRET_ID }}
         run: serverless deploy --verbose --stage dev
