Add register device endpoint, fix authorizer context issues

--- a/serverless.yml
+++ b/serverless.yml
@@ -171,6 +171,31 @@ functions:
           method: get
 
   # USERS
+  registerDevice:
+    handler: source/bin/registerDevice
+    name: register-device-${self:provider.stage}
+    description: "Register a device with a user for notifications"
+    memorySize: 128
+    timeout: 10
+    environment:
+      GOOGLE_PLATFORM_APP: arn:aws:sns:ap-southeast-2:292374005836:app/GCM/google-fcm-notifications-dev
+      APPLE_PLATFORM_APP: arn:aws:sns:ap-southeast-2:292374005836:app/APNS/apple-apn-notifications-dev
+    package:
+      include:
+        - ./source/bin/registerDevice
+    events:
+      - http:
+          path: user/device
+          method: post
+          request:
+            schema:
+              application/json: ${file(schemas/device/register.json)}
+          authorizer:
+            name: authorizer
+            resultTtlInSeconds: 0
+            identitySource: method.request.header.Authorization
+            type: token
+
   getUser:
     handler: source/bin/getUser
     name: get-user-${self:provider.stage}
