--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@ FACEBOOK_CLIENT_ID=
 FACEBOOK_SECRET_ID=
 GOOGLE_CLIENT_ID=
 GOOGLE_SECRET_ID=
-GITHUB_CLIENT_ID=
-GITHUB_SECRET_ID=
+GH_CLIENT_ID=
+GH_SECRET_ID=
+JWT_VERIFY_KEY=
