--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,8 @@ jobs:
           go build -ldflags="-s -w" -o bin/leaveGroup     rest/group/leaveGroup/main.go
           go build -ldflags="-s -w" -o bin/getGroupQR     rest/group/getGroupQR/main.go
 
+          go build -ldflags="-s -w" -o bin/songSearch     rest/song/songSearch/main.go
+
           go build -ldflags="-s -w" -o bin/createVote     rest/votes/createVote/main.go
           go build -ldflags="-s -w" -o bin/deleteVote     rest/votes/deleteVote/main.go
 
