--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,26 +38,27 @@ jobs:
           go build -ldflags="-s -w" -o bin/registerDevice     rest/device/registerDevice/main.go
           go build -ldflags="-s -w" -o bin/deregisterDevice   rest/device/deregisterDevice/main.go
 
-          go build -ldflags="-s -w" -o bin/getUser        rest/user/getUser/main.go
-          go build -ldflags="-s -w" -o bin/updateUser     rest/user/updateUser/main.go
+          go build -ldflags="-s -w" -o bin/getUser            rest/user/getUser/main.go
+          go build -ldflags="-s -w" -o bin/updateUser         rest/user/updateUser/main.go
 
-          go build -ldflags="-s -w" -o bin/createGroup    rest/group/createGroup/main.go
-          go build -ldflags="-s -w" -o bin/getGroup       rest/group/getGroup/main.go
-          go build -ldflags="-s -w" -o bin/updateGroup    rest/group/updateGroup/main.go
-          go build -ldflags="-s -w" -o bin/joinGroup      rest/group/joinGroup/main.go
-          go build -ldflags="-s -w" -o bin/leaveGroup     rest/group/leaveGroup/main.go
-          go build -ldflags="-s -w" -o bin/getGroupQR     rest/group/getGroupQR/main.go
+          go build -ldflags="-s -w" -o bin/createGroup        rest/group/createGroup/main.go
+          go build -ldflags="-s -w" -o bin/getGroup           rest/group/getGroup/main.go
+          go build -ldflags="-s -w" -o bin/getGroupMembers    rest/group/getGroupMembers/main.go
+          go build -ldflags="-s -w" -o bin/updateGroup        rest/group/updateGroup/main.go
+          go build -ldflags="-s -w" -o bin/joinGroup          rest/group/joinGroup/main.go
+          go build -ldflags="-s -w" -o bin/leaveGroup         rest/group/leaveGroup/main.go
+          go build -ldflags="-s -w" -o bin/getGroupQR         rest/group/getGroupQR/main.go
 
-          go build -ldflags="-s -w" -o bin/songSearch     rest/song/songSearch/main.go
+          go build -ldflags="-s -w" -o bin/songSearch         rest/song/songSearch/main.go
 
-          go build -ldflags="-s -w" -o bin/createVote     rest/votes/createVote/main.go
-          go build -ldflags="-s -w" -o bin/deleteVote     rest/votes/deleteVote/main.go
+          go build -ldflags="-s -w" -o bin/createVote         rest/votes/createVote/main.go
+          go build -ldflags="-s -w" -o bin/deleteVote         rest/votes/deleteVote/main.go
 
-          go build -ldflags="-s -w" -o bin/chuneMachine   lambda/chune-machine/main.go
-          go build -ldflags="-s -w" -o bin/beanCounter    lambda/bean-counter/main.go
-          go build -ldflags="-s -w" -o bin/scoreTaker     lambda/score-taker/main.go
-          go build -ldflags="-s -w" -o bin/authorizer     lambda/authorizer/main.go
-          go build -ldflags="-s -w" -o bin/townCrier      lambda/town-crier/main.go
+          go build -ldflags="-s -w" -o bin/chuneMachine       lambda/chune-machine/main.go
+          go build -ldflags="-s -w" -o bin/beanCounter        lambda/bean-counter/main.go
+          go build -ldflags="-s -w" -o bin/scoreTaker         lambda/score-taker/main.go
+          go build -ldflags="-s -w" -o bin/authorizer         lambda/authorizer/main.go
+          go build -ldflags="-s -w" -o bin/townCrier          lambda/town-crier/main.go
 
       - name: Setup Node
         uses: actions/setup-node@v1
