--- a/serverless.yml
+++ b/serverless.yml
@@ -349,6 +349,8 @@ functions:
           method: get
           request:
             parameters:
+              querystrings:
+                withVotes: true
               paths:
                 groupId: true
           authorizer:
