Add support for generating a pre-signed url for uploading internal user avatars

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
 
           go build -ldflags="-s -w" -o bin/getUser            rest/user/getUser/main.go
           go build -ldflags="-s -w" -o bin/updateUser         rest/user/updateUser/main.go
+          go build -ldflags="-s -w" -o bin/getAvatarURL       rest/user/getAvatarURL/main.go
 
           go build -ldflags="-s -w" -o bin/createGroup        rest/group/createGroup/main.go
           go build -ldflags="-s -w" -o bin/getGroup           rest/group/getGroup/main.go
